--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -20,8 +21,11 @@ jobs:
     - name: Install requirements
       run: pip install -r requirements.txt
       
-    - name: Test with Flake8
-      run: flake8 .
+    - name: Test with Black
+      run: black --check --diff .
+
+    - name: Test with Isort
+      run: isort --check-only -diff --profile black .
       
     - name: Test with Pytest
       run: pytest -v
