--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -22,7 +22,7 @@ jobs:
       run: pip install -r requirements.txt
       
     - name: Test with Black
-      run: black --check --diff .
+      run: black --check --diff --line-length 79 .
 
     - name: Test with Isort
       run: isort --check-only -diff --profile black .
