--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-black
-flake8
-flake8-bugbear
-flake8-pie
-isort
-mypy
-pytest
-fastapi
-sqlalchemy
-pydantic
-aiosqlite
+aiosqlite==0.17.0
+black==24.4.2
+fastapi==0.70.0
+flake8==7.1.0
+flake8-bugbear==24.4.26
+flake8-pie==0.16.0
+isort==5.13.2
+mypy==1.10.0
+pydantic==1.10.15
+pytest==8.2.0
+SQLAlchemy==2.0.30
