--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -25,7 +25,7 @@ jobs:
       run: black --check --diff --line-length 79 .
 
     - name: Test with Isort
-      run: isort --check-only -diff --profile black .
+      run: isort --check --diff --profile black .
 
     - name: Test with Mypy
       run: mypy .
